--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,6 @@
     "name": "slims/merad",
     "description": "Migrasikan data otomasi anda ke SLiMS",
     "type": "project",
-    "require": {
-        "laravel/database": "^8.83"
-    },
     "license": "GPL-3.0",
     "autoload": {
         "psr-4": {
@@ -16,5 +13,8 @@
             "name": "Drajat Hasan"
         }
     ],
-    "minimum-stability": "stable"
+    "minimum-stability": "stable",
+    "require": {
+        "illuminate/database": "^10.44"
+    }
 }
