--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "license": "GPL-3.0",
     "autoload": {
         "psr-4": {
-            "SLiMS\\Merad\\": "src/"
+            "SLiMS\\Merad\\": "src/",
+            "Customs\\": "customs/"
         }
     },
     "authors": [
