--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     ],
     "minimum-stability": "stable",
     "require": {
+        "php": "^8.1",
         "illuminate/database": "^10.44"
     }
 }
